unit tests update for ImageSyncManager